5. Kubernetes/NguyenDaiAn/k8s/deploys/api_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: NodePort
  selector:
    name: api
  ports:
  - name: api-port
    protocol: "TCP"
    port: 8001
    targetPort: 8001
  selector:
    app: api
