5. Kubernetes/NguyenDaiAn/k8s/deploys/db_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  selector:
    app: db
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
