5. Kubernetes/NguyenDaiAn/k8s/deploys/web_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  type: NodePort 
  selector:
    app: web
  ports:
  - name: web-port
    protocol: "TCP"
    port: 8000
    targetPort: 8001
  selector:
    app: web
