5. Kubernetes/NguyenDaiAn/k8s/deploys/ingress.yaml
# currently not in use anymore
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: project-ingress-class-name
  rules:
  - http:
      paths:
      - path: /web
        pathType: Prefix
        backend:
          service:
            name: web-service
            port: 
              number: 8000
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api-service
            port:
              number: 8001
